crates/goat_linter/src/snapshots/goat_package_json_order_properties.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ goat(package-json-order-properties): Top-level property `version` is not ordered in the standard way.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"version":"1.0.0","name":"demo"}
   · ─
   ╰────
  help: Reorder top-level package.json properties consistently.

  ⚠ goat(package-json-order-properties): Top-level property `description` is not ordered in the standard way.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"description":"x","name":"demo","version":"1.0.0"}
   · ─
   ╰────
  help: Reorder top-level package.json properties consistently.

  ⚠ goat(package-json-order-properties): Top-level property `foo` is not ordered in the standard way.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"foo":"x","name":"demo","version":"1.0.0"}
   · ─
   ╰────
  help: Reorder top-level package.json properties consistently.
