crates/goat_linter/src/snapshots/goat_package_json_repository_shorthand.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ goat(package-json-repository-shorthand): Prefer an object locator for a repository.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"repository":"npm/example"}
   · ─
   ╰────
  help: Use `{ "type": "git", "url": "..." }` for the `repository` field.

  ⚠ goat(package-json-repository-shorthand): Prefer an object locator for a repository.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"repository":"github:npm/example"}
   · ─
   ╰────
  help: Use `{ "type": "git", "url": "..." }` for the `repository` field.

  ⚠ goat(package-json-repository-shorthand): Prefer a shorthand locator for a supported repository provider.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"repository":{"type":"git","url":"https://github.com/npm/example"}}
   · ─
   ╰────
  help: Use provider shorthand such as `github:user/repo` when the repository URL can be normalized safely.

  ⚠ goat(package-json-repository-shorthand): Prefer a shorthand locator for a supported repository provider.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"repository":"https://gitlab.com/user/repo.git"}
   · ─
   ╰────
  help: Use provider shorthand such as `github:user/repo` when the repository URL can be normalized safely.
