crates/goat_linter/src/snapshots/goat_package_json_sort_collections.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ goat(package-json-sort-collections): Entries in `dependencies` are not in lexicographical order.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"dependencies":{"b":"1","a":"1"}}
   · ─
   ╰────
  help: Sort the collection consistently to reduce noisy diffs.

  ⚠ goat(package-json-sort-collections): Entries in `scripts` are not in lifecycle-aware lexicographical order.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"scripts":{"build":"x","postbuild":"x","prebuild":"x"}}
   · ─
   ╰────
  help: Group `pre<name>`, `<name>`, and `post<name>` scripts together in a stable order.

  ⚠ goat(package-json-sort-collections): Entries in `pnpm.patchedDependencies` are not in lexicographical order.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:1]
 1 │ {"pnpm":{"patchedDependencies":{"b":"patch","a":"patch"}}}
   · ─
   ╰────
  help: Sort the collection consistently to reduce noisy diffs.
