crates/goat_linter/src/snapshots/goat_package_json_valid_bin.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ goat(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:8]
 1 │ {"bin":""}
   ·        ──
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ goat(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:8]
 1 │ {"bin":{}}
   ·        ──
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ goat(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:8]
 1 │ {"bin":{"demo":""}}
   ·        ───────────
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ goat(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:8]
 1 │ {"bin":{"demo":1}}
   ·        ──────────
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.

  ⚠ goat(package-json-valid-bin): The `bin` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:8]
 1 │ {"bin":1}
   ·        ─
   ╰────
  help: Use a non-empty string or an object whose values are non-empty strings.
