crates/goat_linter/src/snapshots/goat_package_json_valid_engines.snap
---
source: crates/goat_linter/src/tester.rs
---

  ⚠ goat(package-json-valid-engines): The `engines` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:12]
 1 │ {"engines":"node >= 18"}
   ·            ────────────
   ╰────
  help: Use an object with runtime names as keys and semver ranges as values, e.g. `{ "node": ">=18" }`.

  ⚠ goat(package-json-valid-engines): The `engines` field in package.json is invalid.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:12]
 1 │ {"engines":1}
   ·            ─
   ╰────
  help: Use an object with runtime names as keys and semver ranges as values, e.g. `{ "node": ">=18" }`.

  ⚠ goat(package-json-valid-engines): The `engines.node` value in package.json must be a non-empty string.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:20]
 1 │ {"engines":{"node":""}}
   ·                    ──
   ╰────
  help: Use a semver range string like `>=18`, `^20.0.0`, or `*`.

  ⚠ goat(package-json-valid-engines): The `engines.node` value in package.json must be a non-empty string.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:20]
 1 │ {"engines":{"node":1}}
   ·                    ─
   ╰────
  help: Use a semver range string like `>=18`, `^20.0.0`, or `*`.

  ⚠ goat(package-json-valid-engines): The `engines.npm` value in package.json must be a non-empty string.
   ╭─[/Users/alexeylyakhov/projects/oxc/crates/goat_linter/fixtures/import/package.json:1:33]
 1 │ {"engines":{"node":">=18","npm":""}}
   ·                                 ──
   ╰────
  help: Use a semver range string like `>=18`, `^20.0.0`, or `*`.
